# grpc-servcice-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  docker-compose.yaml
.github/workflows/: breaking.yaml  buf-lint.yaml  lint-test.yaml  lint.yaml  publish.yaml  rust-lint.yaml
bindings/: Cargo.toml  build.rs
bindings/src/: lib.rs
client/: Cargo.toml
client/src/: main.rs
common/: Cargo.toml
common/src/: lib.rs
docker/: Dockerfile
docker/scripts/: image-entrypoint.sh  time-image-entrypoint.sh
envoy/: envoy.yaml
proto/com/github/canardleteer/grpc_service_rs/v1alpha1/: time.proto
proto/github/canardleteer/grpc_service_rs/v1alpha1/: time.proto
service/: Cargo.toml
service/src/: main.rs
time-bindings/: Cargo.toml  build.rs
time-bindings/src/: lib.rs
time-client/: Cargo.toml
time-client/src/: main.rs
time-server/: Cargo.toml
time-server/src/: main.rs
time-service/: Cargo.toml
time-service-client/: Cargo.toml
time-service-server/: Cargo.toml
time-service/src/: lib.rs
