[package]
name = "service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4", features = ["derive", "env", "cargo"] }
prost = "0.12.3"
prost-types = "0.12.3"
time_service_bindings = { version = "0.1.0", path = "../bindings", package = "bindings" }
time_service_common = { version = "0.1.0", path = "../common", package = "common" }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tonic = "0.10.2"
tonic-health = "0.10.2"
tonic-reflection = "0.10.2"
tracing = "0.1.0"