[package]
name = "time-client"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive", "env", "cargo"] }
prost = "0.12.3"
time_service_bindings = { version = "0.1.0", path = "../time-bindings", package = "time-bindings" }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tonic = "0.10.2"
tracing = "0.1"

