[package]
name = "time-server"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive", "env", "cargo"] }
prost = "0.12.3"
prost-types = "0.12.3"
time_bindings = { version = "0.1.0", path = "../time-bindings", package = "time-bindings" }
time_service = { version = "0.1.0", path = "../time-service", package = "time-service" }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tonic = "0.10.2"
tonic-health = "0.10.2"
tonic-reflection = "0.10.2"
tracing = "0.1.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
