[package]
name = "time-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.12.3"
time-bindings = { version = "0.1.0", path = "../time-bindings" }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tonic = "0.10.2"
tracing = "0.1.0"